<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventHandler"
            type="com.ballastlane.android.texasam.app.events.EventsLogin" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_xxx_large_size"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_large_size">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_large_size"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_xxx_large_size"
                android:gravity="center"
                android:text="@string/login_label"
                android:textColor="@color/white"
                android:textSize="@dimen/default_large_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_large_size"
                android:layout_marginTop="@dimen/default_xxx_large_size"
                android:text="@string/email_test"
                android:textColor="@color/white"
                android:textSize="@dimen/default_large_size" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_size"
                    android:theme="@style/MyEditTextStyle"
                    tools:ignore="SpUsage" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_large_size"
                android:background="@drawable/btn_login_selector"
                android:onClick="@{() -> eventHandler.onClickLogin()}"
                android:text="@string/login_btn_text"
                android:textColor="@color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_extra_large_size"
                android:onClick="@{() -> eventHandler.onClickRecoverPassword()}"
                android:text="@string/login_recover_password"
                android:textColor="@color/white"
                android:textSize="@dimen/default_large_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_extra_large_size"
                android:onClick="@{() -> eventHandler.onClickSupport()}"
                android:text="@string/login_support"
                android:textColor="@color/white"
                android:textSize="@dimen/default_large_size" />
        </LinearLayout>
    </ScrollView>
</layout>