<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="eventHandler"
            type="com.ballastlane.android.texasam.app.events.EventsEmailValidation" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_medium_size">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:shadowColor="@color/white"
                    android:textColorHint="@color/hint_gray"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contact_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_contact_email"
                        android:textColor="@color/text_color"
                        android:theme="@style/MyEditTextStyleRegister" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_medium_size"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Spinner>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_medium_size"
                        android:layout_weight="1"
                        android:shadowColor="@color/white"
                        android:textColorHint="@color/hint_gray"
                        android:theme="@style/TextLabel">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone_number"
                            android:textColor="@color/text_color"
                            android:theme="@style/MyEditTextStyleRegister" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_medium_size"
            android:background="@drawable/btn_register_selector"
            android:onClick="@{() -> eventHandler.onClickContinue()}"
            android:text="@string/btn_register"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>