<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="eventHandler"
            type="com.ballastlane.android.texasam.app.events.EventsEmailValidation" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_xxx_large_size"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_large_size">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_large_size"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_large_size"
                android:layout_marginTop="@dimen/default_xxx_large_size"
                android:text="@string/enter_email_label"
                android:textColor="@color/white"
                android:textSize="@dimen/default_large_size" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="@color/white"
                    android:theme="@style/MyEditTextStyle" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_extra_large_size"
                android:background="@drawable/btn_login_selector"
                android:onClick="@{() -> eventHandler.onClickContinue()}"
                android:text="@string/enter_email_btn_text"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</layout>